2005-02-12  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h (-setalpha::): Declare.
	* Source/GSDisplayServer.m (-setalpha::): New method for window
	alpha setting, with empty default implementation.
	* Source/NSWindow.m (-setAlphaValue:): Implemented alpha setting
	via display server.
	(-_initDefaults): Set _alphaValue to 1.0.

2005-02-12  Fred Kiefer <FredKiefer@gmx.de>

	* Model/GMAppKit.m (NSButtonCell-initWithModelUnarchiver:):
	Resorted code to work around AppKit change on button type
	handling. Patch by Georg Fleischmann <georg@vhf.de>	

2005-02-12  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-boundingRectFor:result:): Further
	corrections on last change.

2005-02-11  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAffineTransform.m (-boundingRectFor:result:):
	Corrected algorithm to compute bounding box for transformed
	rectangle (Code based on Cairo). This fixes bug #11562.

2005-02-08  Matt Rice  <ratmice@yahoo.com>

	* Source/NSApplication.m (-changeWindowsItem:title:filename:): If the
	window can become key, use makeKeyAndOrderFront: as the action.
	(-updateWindowsItem:, -setWindowsMenu): Compare the title to what it
	would be if there was a represented filename, not the filename.
	* Source/NSApplication.m (-orderWindow:relativeTo:): Ditto.
	(-setExcludedFromWindowsMenu): Ditto.

2005-02-08  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSSecureTextField.m (-drawInteriorWithFrame:inView:):
	Draw the background colour of the cell.
	
2005-02-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSTableView.m (-expandItem:expandChildren:,
	collapseItem:collapseChildren:): Added a call to setNeedsDisplay:,
	so the new status will be shown correctly.
	(_openItem:): Removed setNeedsDisplay: call as all callers do it already.

2005-02-05 15:42 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDataLinkManager.h: Moved NSDataLinkManager delegate